August 2008 2.4.0
  - save last selected server profile from login page


30.04.2008 2.3.0
  - added Polish translation
  - support phpGroupWare accounts
  - password policies
  - redesigned PDF editor
  - show mail addresses as link in account list
  - Unix: allow primary group members to be added as memberUid
  - Kolab: support LAM Pro self service
  - LAM Pro: new account type for groupOf(Unique)Names
  - fixed bugs:
   -> XHTML headers should be removed (1912736)


23.01.2008 2.2.0
  - account lists:
   -> allow to switch sorting
   -> added separate configuration page and store settings in cookies
   -> list size can now be set individually for each account type on the list configuration page
   -> new PDF buttons
  - use suffix from account list as default for new accounts (patch 1823583)
  - Security: passwords in configuration files are now saved as hash values
  - improved design
  - style fixes for Internet Explorer users
  - Unix: allow to set host passwords (RFE 1754069)
  - Unix: allow to generate random passwords for users
  - Samba 3 groups: Samba part is now optional
  - Personal: add object classes person and organizationalPerson for new accounts (RFE 1830033)
  - new LDAP schema check on tests page
  - LAM Pro:
   -> added possibility for deskside support to reset passwords at account list page
   -> access levels (read only, change passwords, write access) for server profiles


07.11.2007 2.1.0
  - tabular design for account pages
  - show DN on account pages
  - Samba 3: made Samba account optional
  - Samba 3: manages now terminal server settings
  - fixed bugs:
   -> LAM Pro: UTF-8 characters are invalid displayed on configuration page (1788752)
   -> LAM works again on PHP 5.1.x (1792447)
   -> Quota: managing group quotas does not work (1811728)
   -> Samba 3 domains: lockout users after bad logon attempts must allow 0 - 999 (1814578)


08.08.2007 2.0.0
  - new translations: Chinese (Simplified), Czech and Portuguese